Added javascript functionality

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .main-header{
     font-size: 70px;
-    margin-bottom: 70px;
+    margin-bottom: 20px;
+    text-align: center;
 
 }
 
@@ -14,8 +15,7 @@
 .container{
        display: flex;
        flex-direction: column;
-       align-items: center;
-       width: 70vw; ;
+       width: 70vw;
 
 }
 .empty-state__title,
@@ -32,7 +32,7 @@
 
 form{
    width: 100%;
-   padding: 10px;
+   display: flex;
    justify-content: space-between;
 
 }
@@ -49,7 +49,7 @@ input{
 }
 .todo-item{
     margin-top: 10px;
-    widows: 100px;
+    width: 100%;
     display:flex;
     align-items: center;
     justify-content: space-between;
@@ -78,7 +78,7 @@ input[type="checkbox"]{
    cursor: pointer;
 }
 .tick::before{
-      content:"*";
+      content:"✔";
       font-size: 20px;
       display: none;
 }
@@ -98,4 +98,11 @@ input[type="checkbox"]{
        width:30px;
        height:30px;
        pointer-events: none;
+}
+body{
+    display: flex;
+    justify-content: center;
+}
+.todo-list:empty + .empty-state{
+    display:flex;
 }
